--- a/res/assets/ckeditor/plugins/codesnippet/lib/highlight/styles/obsidian.css
+++ b/res/assets/ckeditor/plugins/codesnippet/lib/highlight/styles/obsidian.css
@@ -1,6 +1,6 @@
 /**
  * Obsidian style
- * ported by Alexander Marenin (http://github.com/ioncreature)
+ * ported by Oleksandr Marenin (http://github.com/ioncreature)
  */
 
 .hljs {
